bearerauth og apikey removed
