# apps/national-registry/src/openapi.json
@@ -57,18 +57,6 @@
     }
   ],
   "components": {
-    "securitySchemes": {
-      "bearer": {
-        "scheme": "bearer",
-        "bearerFormat": "JWT",
-        "type": "http"
-      },
-      "API Key": {
-        "type": "apiKey",
-        "in": "header",
-        "name": "apiKey"
-      }
-    },
     "schemas": {
       "Person": {
         "type": "object",
